2008-05-29  smeghead <smeghead@users.sourceforge.jp>

    * XHTMLのエラーを修正した。

2008-05-28  smeghead <smeghead@users.sourceforge.jp>

    * 管理ツールのバックアップのリンクを削除した。
    * ヘルプページに逆引きヘルプの項目を追加した。
    * 管理ツールの項目設定の説明文を修正した。
    * ホームのURLのデフォルトを空文字列に変更した。

2008-05-27  smeghead <smeghead@users.sourceforge.jp>

    * カーソルを載せたときのボタンのスタイル指定を削除した。
    * チケット検索でクッキーの値を復元する条件を修正した。
    * h3タグの背景画像を削除した。

2008-05-25  smeghead <smeghead@users.sourceforge.jp>

    * csvダウンロード時のfree忘れに対応した。
    * チケット一括登録の説明文を更新した。
    * ヘルプの不要な部分を削除した。
    * 管理ツールの項目設定の選択肢を表示するテーブルのCSSを変更した。
    * INSTALLにバックアップ方法を追記した。

2008-05-22  smeghead <smeghead@users.sourceforge.jp>

    * 0.3.3-beta リリース

2008-05-22  smeghead <smeghead@users.sourceforge.jp>

    * cookie保存時のPathを / から、script_nameのパスを指定するように修正した。
    * cookie保存時は、base64でエンコードしてから保存し、取得時は、base64デコードするようにした。
    * リリースの準備。

2008-05-19  smeghead <smeghead@users.sourceforge.jp>

    * 検索条件を保存している状態でページ上部の状態別のリンクをクリックした時に
      検索結果が変化しないバグを修正した。状態別リンクをクリックした場合、選択
      された条件と保存されている条件を合わせて検索する仕様とする。これは不自然
      かもしれないので、この部分の動作を変更する可能性はある。

2008-05-17  smeghead <smeghead@users.sourceforge.jp>

    * 検索条件の保存。キーワード検索の検索条件を保存する条件が間違ってる問題を修正した。

2008-05-17  smeghead <smeghead@users.sourceforge.jp>

    * 0.3.2-beta リリース

2008-05-17  smeghead <smeghead@users.sourceforge.jp>

    * 検索結果でhit件数を表示している部分に、チケットの状態別の内訳を表示するようにした。
    * 検索条件の保存処理の完成。
    * リリースの準備。
    * testの更新。

2008-05-15  smeghead <smeghead@users.sourceforge.jp>

    * 検索条件の保存処理の作成中。cookieの読取。単一の条件の項目とキーワードに対応。

2008-05-14  smeghead <smeghead@users.sourceforge.jp>

    * action構造体の型を他と合わせて大文字から始まるActionに変更した。
    * 検索条件の保存処理の作成中。cookieの設定。

2008-05-12  smeghead <smeghead@users.sourceforge.jp>

    * download時の書き込みをfwrite関数で行なうように修正した。

2008-05-09  smeghead <smeghead@users.sourceforge.jp>

    * freeし忘れている部分を修正した。hook処理の部分とチケット一括登録の部分。
    * 新しいチケットを登録するリンクを新しく追加した。
    * bool型を導入した。

2008-05-07  smeghead <smeghead@users.sourceforge.jp>

    * チケット詳細ページの履歴表示部分でのfreeタイミングによるバグの修正。